--- a/app/views/base.phtml
+++ b/app/views/base.phtml
@@ -17,6 +17,7 @@
         <![endif]-->
         <?= $this->section ('style') ?>
         <link rel="stylesheet" href="public/assets/css/style.css" type="text/css"/>
+        <link rel="stylesheet" href="public/assets/lib/jquery.gritter/css/jquery.gritter.css" type="text/css"/>
         <style>
             .no-lr-gutter{
                 padding-left:0px !important;
@@ -47,7 +48,7 @@
                             <li class="dropdown">
                                 <a href="#" data-toggle="dropdown" role="button" aria-expanded="false" class="dropdown-toggle">
                                     <img src="public/assets/img/<?= $active_user_data['image'] ?>" alt="Avatar">
-                                    <span class="user-name">Túpac Amaru</span>
+                                    <span class="user-name"><?= $this->e($active_user_data['nama']); ?></span>
                                 </a>
                                 <ul role="menu" class="dropdown-menu">
                                     <li>
@@ -119,14 +120,20 @@
         <script src="public/assets/lib/moment.js/locale/id.js" type="text/javascript"></script>
         <script src="public/assets/lib/mustache/mustache.min.js" type="text/javascript"></script>
         <script src="public/assets/lib/twig/twig.js" type="text/javascript"></script>
+        <script src="public/assets/lib/jquery.gritter/js/jquery.gritter.min.js" type="text/javascript"></script>
+        <script src="public/assets/lib/jquery.niftymodals/dist/jquery.niftymodals.js" type="text/javascript"></script>
         <script type="text/javascript">
+            var active_user = {
+                user_id:'<?= $active_user_data['id_user'] ?>',
+                previledge:'<?= $active_user_data['previledge'] ?>',
+            };
             $(document).ready(function () {
                 //initialize the javascript
                 App.init();
-
                 //Runs prettify
                 prettyPrint();
                 moment.locale('id');
+                $('[data-toggle="tooltip"]').tooltip()
             });
         </script>
         <?= $this->section ('js') ?>
