--- a/app/views/dashboard.phtml
+++ b/app/views/dashboard.phtml
@@ -1,76 +1,119 @@
 <?php
-    $parent_data = [
-        'active_user_data' => $active_user_data,
-        'active_notification_list' => $active_notification_list
-    ];
-    $this->layout ('base', $parent_data);
-    $this->start ('style');
+$parent_data = [
+    'active_user_data' => $active_user_data,
+    'active_notification_list' => $active_notification_list
+];
+$this->layout ('base', $parent_data);
+$this->start ('style');
 ?>
-<link rel="stylesheet" type="text/css" href="<?= $this->asset('lib/datatables/css/dataTables.bootstrap.min.css'); ?>"/>
+<link rel="stylesheet" type="text/css" href="public/assets/lib/datatables/css/dataTables.bootstrap.min.css"/>
 <!--tempat css/style-->
 <?php
-    $this->stop ();
-    $this->start ('contents');
+$this->stop ();
+$this->start ('page-title');
+?>
+Dahsboard
+<?php
+$this->stop();
+$this->start ('contents');
 ?>
 <!--tempat konten-->
-<div class="content-wrapper">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h4 class="page-head-line">Dashboard</h4>
-
-            </div>
-
-        </div>
-        <div class="row">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            Daftar Berita Tender
-                        </div>
-                        <div class="panel-body">
-                            <div class="dataTable_wrapper">
-                                <table class="table table-striped table-bordered table-hover" id="dataTables-example">
-                                    <thead>
-                                        <tr>
-                                            <th width="80">Tanggal</th>
-                                            <th>Nama</th>
-                                            <th>Penyelenggara</th>
-                                            <th>Wilayah</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td width="100">01-12-2016 s/d 05-12-2016</td>
-                                            <td> PENGADAAN MAINTENANCE SERVER DI DATA CENTER PT INDONESIA POWER (ULANG)
-                                                <br> <a href="detail.html"> [detail..] </a> </br><br>
-                                                <p> On Progress : </p>
-                                                <div class="progress">
-                                                    <div class="progress-bar progress-bar-striped active" role="progressbar"
-                                                         aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:50%">
-                                                        50%
-                                                    </div>
-                                                </div>
-                                                </br></td>
-                                            <td> PT. INDONESIA POWER</td>
-                                            <td class="center"> KANTOR PUSAT</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<div class="main-content container-fluid">
+    <div class="panel panel-default panel-table">
+        <div class="panel-body">
+            <table id="table-berita-tender" class="table table-hover table-fw-widget" style="border-top: 0px !important;">
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th width="50%">Judul</th>
+                        <th width="15%">Penyelenggara</th>
+                        <th width="20%">Progres</th>
+                        <th class="actions"></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <?php foreach(array_reverse($beritaTender) as $key => $tender): ?>
+                        <?php $approve = json_decode($tender['approval'], true) ?>
+                        <tr class="<?= ($this->dateAboveNow($tender['tgl_selesai']) ? null : 'text-muted') ?>">
+                            <td><?= $key+1 ?></td>
+                            <td class="cell-detail">
+                                <span><?= $tender['judul_tender'] ?></span>
+                                <span class="cell-detail-description">
+                                    <?= $this->indDate($tender['tgl_mulai']) ?>
+                                    &nbsp;s/d&nbsp;
+                                    <?= $this->indDate($tender['tgl_selesai']) ?>
+                                </span>
+                            </td>
+                            <td class="cell-detail">
+                                <span><?= $this->getNamaPenyelenggara($tender['id_penyelenggara']) ?></span>
+                                <span class="cell-detail-description">
+                                    <?= $tender['wilayah'] ?>
+                                </span>
+                            </td>
+                            <td class="milestone"><span class="completed"><?= ceil($this->getProgress($tender['id_tender'])['progress']) ?>%</span><span class="version"><?= $this->getProgress($tender['id_tender'])['process'] ?></span>
+                                <div class="progress">
+                                    <div style="width: <?= $this->getProgress($tender['id_tender'])['progress'] ?>%" class="progress-bar progress-bar-primary"></div>
+                                </div>
+                            </td>
+                            <td class="actions">
+                                <a href="<?= $this->pathFor('beritaTender_detail' , ['id_tender'=>$tender['id_tender']]) ?>" class="btn btn-space btn-primary"><i class="icon icon-left mdi mdi-eye" style="color:#fff;"></i> Detail</a>
+                            </td>
+                        </tr>
+                    <?php endforeach;?>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
 <!--akhir tempat konten-->
 <?php
-    $this->stop ();
-    $this->start ('js');
+$this->stop ();
+$this->start ('js');
 ?>
 <!--tempat js-->
+
+<script src="public/assets/lib/datatables/js/jquery.dataTables.min.js" type="text/javascript"></script>
+<script src="public/assets/lib/datatables/js/dataTables.bootstrap.min.js" type="text/javascript"></script>
+<script src="public/assets/lib/datatables/plugins/buttons/js/dataTables.buttons.js" type="text/javascript"></script>
+<script src="public/assets/lib/datatables/plugins/buttons/js/buttons.html5.js" type="text/javascript"></script>
+<script src="public/assets/lib/datatables/plugins/buttons/js/buttons.flash.js" type="text/javascript"></script>
+<script src="public/assets/lib/datatables/plugins/buttons/js/buttons.print.js" type="text/javascript"></script>
+<script src="public/assets/lib/datatables/plugins/buttons/js/buttons.colVis.js" type="text/javascript"></script>
+<script src="public/assets/lib/datatables/plugins/buttons/js/buttons.bootstrap.js" type="text/javascript"></script>
+<script src="public/assets/js/app-tables-datatables.js" type="text/javascript"></script>
+<script>
+    $(document).ready(function () {
+        //We use this to apply style to certain elements
+        $.extend( true, $.fn.dataTable.defaults, {
+            dom:
+            "<'row be-datatable-header'<'col-sm-6'l><'col-sm-6'f>>" +
+            "<'row be-datatable-body'<'col-sm-12'tr>>" +
+            "<'row be-datatable-footer'<'col-sm-5'i><'col-sm-7'p>>",
+            language: {
+
+                emptyTable: "Tidak ada data tersedia",
+                lengthMenu: "Tampilkan _MENU_ data per halaman",
+                "zeroRecords": "Tidak ada data yang cocok dengan pencarian anda",
+                "info": "Hal _PAGE_ dari _PAGES_ halaman",
+                "infoEmpty": "Tidak ada data tersedia",
+                "infoFiltered": "(filtered from _MAX_ total records)",
+                "paginate": {
+                    "first": '<i class="mdi mdi-caret-left-circle"></i>',
+                    "last": '<i class="mdi mdi-caret-right-circle"></i>',
+                    "next": '<i class="mdi mdi-caret-right-circle"></i>',
+                    "previous": '<i class="mdi mdi-caret-left-circle"></i>'
+                },
+                "search": '<i class="mdi mdi-search" style="padding-right:5px; font-size:20px"></i>',
+                "searchPlaceholder": 'Cari',
+            },
+        });
+
+        var beritaTable = $('#table-berita-tender').dataTable();
+
+//        $('#table-berita-tender tbody tr td.detail-modal').on('click', function () {
+//            alert($(this).data('id'));
+//        });
+    })
+</script>
 <?php $this->stop () ?>
 
