add edit-delete feature to tender, boq, dokumen, unitkerja. add reset approval when tender has been updated

--- a/app/views/berita-tender/detail.phtml
+++ b/app/views/berita-tender/detail.phtml
@@ -20,6 +20,14 @@
 <?php $approve = json_decode($tender['approval'], true) ?>
     <!--tempat konten-->
     <div class="main-content container-fluid">
+        <?php if($tender['deleted']): ?>
+        <div role="alert" class="alert alert-danger alert-icon alert-dismissible">
+            <div class="icon"><span class="mdi mdi-close-circle-o"></span></div>
+            <div class="message">
+                Berita Tender ini tidak aktif karena telah <b class="text-danger">dihapus</b>
+            </div>
+        </div>
+        <?php endif; ?>
         <?php if ($approval): ?>
             <div role="alert" class="alert alert-primary alert-icon alert-icon-colored ">
                 <div class="icon"><span class="mdi mdi-info-outline"></span></div>
@@ -45,6 +53,12 @@
             <div class="col-md-6">
                 <div class="user-info-list panel panel-default panel-border-color panel-border-color-primary">
                     <div class="panel-heading panel-heading-divider">
+                        <div class="tools">
+                            <a href="<?= $this->pathFor('beritaTender_edit', ['id_tender'=>$tender['id_tender']]) ?>" class="btn btn-space btn-primary" <?= $tender['deleted'] ? 'disabled' : '' ?>>
+                                <i class="icon icon-left mdi mdi-edit" style="color:#fff;"></i>
+                                Ubah
+                            </a>
+                        </div>
                         Berita Tender
                         <span class="panel-subtitle">
                             Informasi Pokok Berita Tender
@@ -249,6 +263,20 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-12 <?= $tender['deleted'] ? 'hidden' : '' ?>">
+                <div class="panel panel-border-color panel-border-color-danger">
+                    <div class="panel-heading">
+                        Hapus Berita Tender
+                        <span class="panel-subtitle">Menghapus Berita Tender ini juga akan menghapus semua data dan informasi yang berhubungan dengan berita tender ini </span>
+                    </div>
+                    <div class="panel-body">
+                        <button class="btn btn-space btn-danger hover">
+                            <i class="icon icon-left mdi mdi-delete"></i>
+                            Hapus
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -270,6 +298,103 @@
                     </div>
                 </div>
                 <div class="modal-footer"></div>
+            </div>
+        </div>
+    </div>
+    <div id="form-unitkerja" tabindex="-1" role="dialog" class="modal fade colored-header colored-header-primary">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" data-dismiss="modal" aria-hidden="true" class="close md-close"><span class="mdi mdi-close"></span></button>
+                    <h3 class="modal-title">Form Input BOQ</h3>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label>Nama Vendor</label>
+                                <input type="text" placeholder="PT. XYZ" id="modal-vendor" class="form-control">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label>Nama Barang</label>
+                                <input type="text" placeholder="GWS 55m" id="modal-barang" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-7">
+                            <div class="form-group">
+                                <label>Harga Barang Satuan</label>
+                                <div class="input-group">
+                                    <span class="input-group-addon" id="basic-addon1">Rp</span>
+                                    <input type="number" class="form-control" id="modal-harga">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <label>Jumlah</label>
+                                <input type="number" class="form-control" id="modal-volume">
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <label>Ukuran Satuan</label>
+                                <select multiple="" id="modal-satuan">
+                                    <optgroup label="Panjang">
+                                        <option value="mm">mm</option>
+                                        <option value="cm">cm</option>
+                                        <option value="m">m</option>
+                                        <option value="km">km</option>
+                                        <option value="inch">inch(&ldquo;)</option>
+                                        <option value="feet">feet</option>
+                                        <option value="mile">mile</option>
+                                    </optgroup>
+                                    <optgroup label="Luas">
+                                        <option value="mm&sup2;">mm&sup2;</option>
+                                        <option value="cm&sup2;">cm&sup2;</option>
+                                        <option value="m&sup2;">m&sup2;</option>
+                                        <option value="km&sup2;">km&sup2;</option>
+                                    </optgroup>
+                                    <optgroup label="Volume">
+                                        <option value="mm&sup3;">mm&sup3;</option>
+                                        <option value="cm&sup3;">cm&sup3;</option>
+                                        <option value="m&sup3;">m&sup3;</option>
+                                        <option value="km&sup3;">km&sup3;</option>
+                                    </optgroup>
+                                    <optgroup label="Berat">
+                                        <option value="g">g</option>
+                                        <option value="ons">ons</option>
+                                        <option value="kg">kg</option>
+                                        <option value="pound">pound</option>
+                                    </optgroup>
+                                    <optgroup label="Volume Cairan">
+                                        <option value="cc">cc</option>
+                                        <option value="ml">ml</option>
+                                        <option value="l">l</option>
+                                        <option value="galon">galon</option>
+                                    </optgroup>
+                                    <optgroup label="Unit">
+                                        <option value="Unit">Unit</option>
+                                        <option value="pcs">pcs</option>
+                                        <option value="lot">lot</option>
+                                        <option value="dus">dus</option>
+                                        <option value="kotak">kotak</option>
+                                        <option value="rol">rol</option>
+                                        <option value="kodi">kodi</option>
+                                        <option value="rim">rim</option>
+                                    </optgroup>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary form-unitkerja-simpan">Tambahkan</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-default md-close">Batal</button>
+                </div>
             </div>
         </div>
     </div>
