--- a/app/views/berita-tender/detail.phtml
+++ b/app/views/berita-tender/detail.phtml
@@ -200,6 +200,16 @@
                                         <span class="cell-detail-description"><?= $this->indDateTime ($tender[ 'tgl_upload' ]) ?></span>
                                     </td>
                                 </tr>
+                                <?php if($tender['last_edit']): ?>
+                                    <tr>
+                                        <td width="35%"><b>Terakhir Diubah Oleh</b></td>
+                                        <td class="user-avatar cell-detail user-info" colspan="3">
+                                            <img src="public/profile/<?= $this->getUserUpload ($tender['last_edit'][ 'id_user' ])[ 'image' ] ?>" alt="Avatar">
+                                            <span><?= ($tender['last_edit'][ 'id_user' ] == $active_user_data['id_user'] ? 'Anda Sendiri' : $this->getUserUpload ($tender['last_edit'][ 'id_user' ])[ 'nama' ]) ?></span>
+                                            <span class="cell-detail-description"><?= $this->indDateTime ($tender['last_edit'][ 'waktu' ]) ?></span>
+                                        </td>
+                                    </tr>
+                                <?php endif; ?>
                                 <tr>
                                     <td style="vertical-align: top !important;"><b>Dokumen RKS</b></td>
                                     <td colspan="3">
@@ -262,6 +272,30 @@
                         </table>
                     </div>
                 </div>
+                <ul class="timeline timeline-variant mod">
+                    <li class="timeline-month"><span>History Perubahan</span></li>
+                    <?php foreach ($tender['history'] as $history): ?>
+                        <li class="timeline-item right">
+                            <div class="timeline-content timeline-type file">
+                                <div class="timeline-icon"><i class="icon mdi mdi-file"></i></div>
+                                <div class="timeline-avatar"><img src="public/profile/<?= $this->getUserUpload ($history[ 'id_user' ])[ 'image' ] ?>" alt="Avatar" class="circle"></div>
+                                <div class="timeline-header"><span class="timeline-autor"><?= $this->getUserUpload ($history[ 'id_user' ])[ 'nama' ] ?></span>
+                                    <p class="timeline-activity">
+                                        <?php switch($history['perubahan']):
+                                            case 'u_tender': ?>
+                                                Mengubah berita tender
+                                                <a href="<?= $this->pathFor('beritaTender_detail', ['id_tender'=>$tender['id_tender']]) ?>">
+                                                    <?= $history['detail']['judul_tender'] ?>
+                                                </a>
+                                                <?php break;?>
+                                        <?php endswitch; ?>
+                                    </p>
+                                    <span class="timeline-time"><?= $this->indDateTime ($history['waktu']) ?></span>
+                                </div>
+                            </div>
+                        </li>
+                    <?php endforeach; ?>
+                </ul>
             </div>
             <div class="col-md-12 <?= $tender['deleted'] ? 'hidden' : '' ?>">
                 <div class="panel panel-border-color panel-border-color-danger">
@@ -270,7 +304,7 @@
                         <span class="panel-subtitle">Menghapus Berita Tender ini juga akan menghapus semua data dan informasi yang berhubungan dengan berita tender ini </span>
                     </div>
                     <div class="panel-body">
-                        <button class="btn btn-space btn-danger hover">
+                        <button class="btn btn-space btn-danger hover"  data-toggle="modal" data-target="#modal-hapus">
                             <i class="icon icon-left mdi mdi-delete"></i>
                             Hapus
                         </button>
@@ -398,6 +432,28 @@
             </div>
         </div>
     </div>
+    <div id="modal-hapus" tabindex="-1" role="dialog" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" data-dismiss="modal" aria-hidden="true" class="close"><span class="mdi mdi-close"></span></button>
+                </div>
+                <div class="modal-body">
+                    <div class="text-center">
+                        <div class="text-danger"><span class="modal-main-icon mdi mdi-delete"></span></div>
+                        <h3>Hapus Berita Tender!</h3>
+                        <p>Apakah anda yakin akan menghapus tender <strong><?= $tender['judul_tender']; ?></strong>?</p>
+                        <p>Menghapus tender akan menghapus semua progress terhadap tender ini.</p>
+                        <div class="xs-mt-50">
+                            <button type="button" data-dismiss="modal" class="btn btn-space btn-default">Cancel</button>
+                            <button type="button" data-dismiss="modal" class="btn btn-space btn-danger btn-hapus">Hapus</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer"></div>
+            </div>
+        </div>
+    </div>
     <!--akhir tempat konten-->
 <?php
     $this->stop ();
@@ -407,6 +463,17 @@
 
     <script>
         $(document).ready(function () {
+            $('#modal-hapus').on('show.bs.modal', function (event) {
+                var modal = $(this);
+                modal.find('.btn-hapus').on('click', function(){
+                    $.post('<?= $this->pathFor('beritaTender_hapus') ?>', {'id_tender':'<?= $tender['id_tender']; ?>'}, function(data){
+                        if(data.status == 'success'){
+                            window.location.replace('<?= $this->pathFor('beritaTender_daftar') ?>');
+                        }
+                    }, 'json');
+                })
+
+            });
             $('#mod-approval').on('show.bs.modal', function (event) {
                 var button = $(event.relatedTarget);
                 var modData = button.data();
